cargo-features = ["edition"]

[package]
name = "pulsar"
version = "0.1.0"
authors = ["Kamyar Mohajerani <kammoh@gmail.com>"]
edition = '2018'

[dependencies]
raw-cpuid = "4.0"
libc = "0.2.42"
rand = "0.5.3"
volatile = "0.2.4"
core_affinity = "0.5.9"

[build-dependencies]
bindgen = "0.37"
cc = "1.0"


